2009-10-22  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Xan Lopez.

        m_webView should be private attribute of the EditorClientGtk.
        https://bugs.webkit.org/show_bug.cgi?id=30664

        * WebKit/gtk/WebCoreSupport/EditorClientGtk.h:

2009-10-20  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by David Levin.

        Removed WebSocket runtime settings.
        https://bugs.webkit.org/show_bug.cgi?id=29896

        WebSocket runtime configuration is supported by chromium/v8 only.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_update_settings):
        (webkit_web_view_settings_notify):

2009-10-19  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Alexey Proskuryakov.

        [Gtk] ApplicationCacheStorage error while compiling WebKit/gtk/webkit/webkitapplicationcache.cpp
        https://bugs.webkit.org/show_bug.cgi?id=30358

        Guard calls to cacheStorage() with ENABLE(OFFLINE_WEB_APPLICATIONS).

        * webkit/webkitapplicationcache.cpp:

2009-10-19  Zan Dobersek  <zandobersek@gmail.com>

        Reviewed by Gustavo Noronha.

        Add a settings to allow DOM pastes to be performed.

        * webkit/webkitwebsettings.cpp:
        (webkit_web_settings_class_init):
        (webkit_web_settings_set_property):
        (webkit_web_settings_get_property):
        (webkit_web_settings_copy):
        * webkit/webkitwebview.cpp:
        (webkit_web_view_update_settings):
        (webkit_web_view_settings_notify):

2009-10-19  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Unreviewed. Make WebKitHitTestResult actually appear in the
        documentation index.

        * docs/webkitgtk-docs.sgml:

2009-10-15  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        Protect WebSocket calls in case the feature is not compiled in.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_update_settings):
        (webkit_web_view_settings_notify):
